Add repository-specific .gitignore
Includes appropriate ignore rules for:
- Build artifacts and binaries
- IDE and editor files
- OS generated files
- Environment and config files
- Language-specific files
- Repository-specific patterns

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,80 @@
-test-go/bin/
+# Loqa Puck .gitignore
+
+# Build artifacts
+bin/
+build/
+dist/
+.pio/
+.vscode/extensions.json
+
+# Go
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+go.work
+go.work.sum
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool
+*.out
+
+# Dependency directories
+vendor/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+logs/
+
+# Audio files (except samples)
+*.wav
+*.mp3
+*.flac
+*.ogg
+!samples/
+!fixtures/
+
+# Temporary files
+tmp/
+temp/
+.tmp/
+
+# ESP32/PlatformIO specific
+.pio/
+.pioenvs/
+.piolibdeps/
+.clang_complete
+.gcc-flags.json
+
+# CMake
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+
+# Local config overrides
+config.local.yml
