--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,11 +79,8 @@ jobs:
     
     strategy:
       matrix:
-        os: [linux, darwin, windows]
+        os: [linux]
         arch: [amd64, arm64]
-        exclude:
-          - os: windows
-            arch: arm64
     
     steps:
     - name: Checkout loqa-puck
@@ -105,8 +102,7 @@ jobs:
     - name: Verify Go version
       run: go version
 
-    - name: Install PortAudio dependencies (Linux)
-      if: matrix.os == 'linux'
+    - name: Install PortAudio dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y portaudio19-dev
