Add explicit permissions to workflows following principle of least privilege

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,11 @@ env:
   REGISTRY: docker.io
   IMAGE_NAME: loqalabs/loqa-test-puck
 
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+
 jobs:
   test-go:
     name: Test Go Client
