Use shared proto checkout workflow in CI pipeline
Added a new `checkout-proto` job to the CI pipeline that uses the shared reusable workflow `go-checkout-proto.yml` from the `.github` repo. This ensures that the `loqa-proto` repository is available in CI before running tests or builds that depend on it via a local `replace` directive in `go.mod`.

Updated the `test-go` and `build-go` jobs to declare `needs: checkout-proto` so the module is properly available before Go compilation begins.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,12 @@ permissions:
   actions: read
 
 jobs:
+  checkout-proto:
+    uses: loqalabs/.github/.github/workflows/go-checkout-proto.yml@main
+
   test-go:
     name: Test Go Client with Hardware
+    needs: checkout-proto
     uses: loqalabs/.github/.github/workflows/go-test-with-hardware.yml@main
     with:
       go-version: '1.23.0'
@@ -31,7 +35,7 @@ jobs:
 
   build-go:
     name: Build Go Client
-    needs: test-go
+    needs: [checkout-proto, test-go]
     uses: loqalabs/.github/.github/workflows/go-build.yml@main
     with:
       go-version: '1.23.0'
