fix: add proto-repo parameter to build workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
       go-version: '1.23.0'
       binary-name: 'test-puck-linux-amd64'
       working-directory: 'test-go'
+      proto-repo: 'loqalabs/loqa-proto'
 
   security:
     name: Security Analysis
