--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,16 +18,11 @@ permissions:
   actions: read
 
 jobs:
-  checkout-proto:
-    uses: loqalabs/.github/.github/workflows/go-checkout-proto.yml@main
-
   test-go:
     name: Test Go Client with Hardware
-    needs: checkout-proto
     uses: loqalabs/.github/.github/workflows/go-test-with-hardware.yml@main
     with:
       go-version: '1.23.0'
-      proto-repo: 'loqalabs/loqa-proto'
       system-packages: 'portaudio19-dev'
       working-directory: 'test-go'
       coverage-flag: 'puck-go'
@@ -35,13 +30,12 @@ jobs:
 
   build-go:
     name: Build Go Client
-    needs: [checkout-proto, test-go]
+    needs: test-go
     uses: loqalabs/.github/.github/workflows/go-build.yml@main
     with:
       go-version: '1.23.0'
       binary-name: 'test-puck-linux-amd64'
       working-directory: 'test-go'
-      proto-repo: 'loqalabs/loqa-proto'
       system-packages: 'portaudio19-dev'
 
   security:
@@ -51,7 +45,6 @@ jobs:
       language: 'go'
       go-version: '1.23.0'
       working-directory: 'test-go'
-      proto-repo: 'loqalabs/loqa-proto'
 
   docker:
     name: Docker Build and Security
