--- a/.gitignore
+++ b/.gitignore
@@ -81,4 +81,4 @@ cmake_install.cmake
 Makefile
 
 # Local config overrides
-config.local.yml
+config.local.yml# Updated Fri Sep  5 21:09:35 CDT 2025
