Update gitignore to share VSCode configurations
- Remove .vscode/ entry from .gitignore
- Allow sharing of VSCode settings, extensions, tasks, and debug configs
- Enables auto-formatting and linting integration for development

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ bin/
 build/
 dist/
 .pio/
-.vscode/extensions.json
 
 # Go
 *.exe
@@ -29,8 +28,7 @@ test-go/test-relay
 # Dependency directories
 vendor/
 
-# IDE files
-.vscode/
+# IDE files (VSCode configs are shared)
 .idea/
 *.swp
 *.swo
