Revert to ignore .vscode directory
- Add .vscode/ back to .gitignore
- VSCode configs serve as templates but allow local customization
- Personal IDE preferences won't be tracked in version control

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,9 @@ test-go/test-relay
 # Dependency directories
 vendor/
 
-# IDE files (VSCode configs are shared)
+# IDE files
 .idea/
+.vscode/
 *.swp
 *.swo
 *~
