--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -38,7 +38,7 @@ jobs:
         go mod download
 
     - name: Run gosec security scanner
-      uses: securecodewarrior/github-action-gosec@master
+      uses: securego/gosec@master
       with:
         args: '-fmt sarif -out gosec-results.sarif ./test-go/...'
       continue-on-error: true
@@ -84,8 +84,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }} # Only required for Organizations
-      with:
-        args: --no-git --redact
 
     - name: Upload GitLeaks results
       uses: github/codeql-action/upload-sarif@v3
