Replace duplicate security workflow with centralized workflow
- Remove standalone security.yml workflow
- Update CI to use loqalabs/.github security-scan.yml reusable workflow
- Includes PortAudio system dependencies and test-go working directory
- Maintains comprehensive security scanning with DRY principles

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,57 +180,11 @@ jobs:
         cache-to: type=gha,mode=max
 
   security:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    
-    permissions:
-      contents: read
-      security-events: write
-      actions: read
-    
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    # Setup Go BEFORE CodeQL initialization
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.25.1'
-        cache-dependency-path: test-go/go.sum
-
-    - name: Install PortAudio dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y portaudio19-dev
-
-    # Initialize CodeQL AFTER Go is set up
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: go
-
-    # Build the project for CodeQL analysis
-    - name: Build project for CodeQL
-      run: |
-        cd test-go
-        go build -v ./...
-
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
-      with:
-        category: "/language:go"
-
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        scan-type: 'fs'
-        scan-ref: '.'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-
-    - name: Upload Trivy scan results
-      if: always()
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: 'trivy-results.sarif'
+    name: Security Analysis
+    uses: loqalabs/.github/.github/workflows/security-scan.yml@main
+    with:
+      language: 'go'
+      go-version: '1.25.1'
+      working-directory: 'test-go'
+      system-packages: 'portaudio19-dev'
+    secrets: inherit
