--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ go.work.sum
 # Go binaries (including test binaries)
 test-relay
 test-go/test-relay
+test-go/test-puck
+test-puck
+relay
 
 # Output of the go coverage tool
 *.out
