--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: Suggest a new feature for Loqa Hub
+description: Suggest a new feature for Loqa Relay
 title: "[Feature]: "
 labels: ["enhancement", "triage"]
 
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for suggesting a new feature for Loqa Hub!
+        Thanks for suggesting a new feature for Loqa Relay!
 
   - type: textarea
     id: problem
@@ -38,11 +38,11 @@ body:
       label: Component
       description: Which component would this feature affect?
       options:
-        - gRPC Audio Service
-        - Whisper STT Integration
-        - LLM Command Parser
+        - HTTP Streaming Audio Service
+        - Audio Capture Pipeline
+        - Wake Word Detection
         - NATS Messaging
-        - HTTP API
+        - Binary Frame Protocol
         - Docker Deployment
         - Configuration
         - Other
