--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+# Loqa Relay - Go Puck Reference Implementation
+# HTTP/1.1 streaming client for voice capture and ESP32 firmware foundation
 name: CI/CD
 
 on:
@@ -11,28 +13,22 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: loqalabs/loqa-mock-relay
+  IMAGE_NAME: loqalabs/loqa-puck-go
 
 jobs:
-  test-go:
-    name: Test Go Client
+  test:
+    name: Test
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout loqa-relay
+    - name: Checkout
       uses: actions/checkout@v4
-      with:
-        path: loqa-relay
 
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
         go-version: '1.25.1'
         cache: true
-        cache-dependency-path: loqa-relay/test-go/go.sum
-
-    - name: Verify Go version
-      run: go version
 
     - name: Install PortAudio dependencies
       run: |
@@ -40,110 +36,42 @@ jobs:
         sudo apt-get install -y portaudio19-dev
 
     - name: Download dependencies
-      run: |
-        cd loqa-relay/test-go
-        go mod download
+      run: go mod download
 
     - name: Run tests
-      run: |
-        cd loqa-relay/test-go
-        go test -v -race -coverprofile=coverage.out ./...
+      run: go test -v -race -timeout=5m -coverprofile=coverage.out ./...
 
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
       with:
-        file: ./loqa-relay/test-go/coverage.out
-        flags: relay-go
-        name: loqa-relay-go
+        file: ./coverage.out
+        flags: loqa-puck-go
+        name: loqa-puck-go
 
     - name: Run go vet
-      run: |
-        cd loqa-relay/test-go
-        go vet ./...
+      run: go vet ./...
 
     - name: Run staticcheck
       run: |
         go install honnef.co/go/tools/cmd/staticcheck@latest
-        cd loqa-relay/test-go
         staticcheck ./...
 
-  build-go:
-    name: Build Go Client
-    runs-on: ubuntu-latest
-    needs: test-go
-    
-    steps:
-    - name: Checkout loqa-relay
-      uses: actions/checkout@v4
-      with:
-        path: loqa-relay
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.25.1'
-
-    - name: Verify Go version
-      run: go version
-
-    - name: Install PortAudio dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y portaudio19-dev
-
     - name: Build binary
-      run: |
-        cd loqa-relay/test-go
-        go build -v -ldflags="-w -s" -o bin/test-relay-linux-amd64 ./cmd
-
-    - name: Upload binary artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-relay-linux-amd64
-        path: loqa-relay/test-go/bin/test-relay-linux-amd64
-
-  # build-firmware:
-  #   name: Build ESP32 Firmware
-  #   runs-on: ubuntu-latest
-  #   
-  #   steps:
-  #   - name: Checkout loqa-relay
-  #     uses: actions/checkout@v4
-  #     with:
-  #       path: loqa-relay
-
-  #   - name: Set up ESP-IDF
-  #     uses: espressif/esp-idf-ci-action@v1
-  #     with:
-  #       esp_idf_version: v5.1
-  #       target: esp32s3
-
-  #   - name: Build firmware
-  #     run: |
-  #       cd loqa-relay/firmware
-  #       idf.py build
-
-  #   - name: Upload firmware artifact
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: esp32-firmware
-  #       path: loqa-relay/firmware/build/*.bin
+      run: go build -v -ldflags="-w -s" -o bin/loqa-puck-go ./cmd
 
   docker:
-    name: Build and Push Docker Image
+    name: Build Docker Image
     runs-on: ubuntu-latest
-    needs: test-go
+    needs: test
     if: github.event_name != 'pull_request'
-    
+
     permissions:
       contents: read
       packages: write
 
     steps:
-    - name: Checkout loqa-relay
+    - name: Checkout
       uses: actions/checkout@v4
-      with:
-        path: loqa-relay
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -172,11 +100,10 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: ./loqa-relay/Dockerfile
+        file: ./Dockerfile
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-
